# ddpm-from-scratch

./: .flake8  .gitignore  LICENSE  README.md  lint.sh  mypy.ini  pyproject.toml
ddpm_from_scratch/: ddim.py  ddpm.py  gaussian_diffusion.py  utils.py
ddpm_from_scratch/engines/: mnist.py
ddpm_from_scratch/models/: __init__.py  lenet5.py  spiral_denoising_model.py  unet.py  unet_big.py  unet_conditioned.py  unet_conditioned_v2.py  unet_simple.py  unet_simple_with_timestep.py  unet_with_conditioning.py  unet_with_timestep.py
ddpm_from_scratch/samplers/: __init__.py  ddim.py  ddpm.py  utils.py
notebooks/: 1_1_spiral.py  1_2_gaussian_diffusion.py  1_3_train_denoiser.py  1_4_plot_coefficients.py  2_1_mnist.py  2_2_mnist.py  2_2_mnist_with_timestep.py  2_3_lenet.py  2_3_mnist.py  2_3_mnist_bigger_unet.py  2_3_unet.py  2_4_fid.py  2_4_lenet.py  2_5_fid.py  3_1_mnist_with_class_conditioning.py  3_1_unet.py  3_2_classifier_free_guidance.py  3_3_better_training.py  3_3_unet_train_again.py  _2_3_mnist_bigger_unet.py  _3_1_mnist_with_class_conditioning.py  _3_2_classifier_free_guidance.py  _3_3_unet_train_again.py  _3_4_inference_again.py
